# dip

./: .gitignore  .travis.yml  Cargo.toml  Dockerfile  README.md  book.toml  index.html
ci/: book.sh
docs/: SUMMARY.md  config.md  deployment.md  handlers.md  intro.md
examples/: github.rs
ext/github/: Cargo.toml
src/: config.rs  github.rs  handler.rs  hook.rs  lib.rs  main.rs  service.rs
src/handlers/: builder.rs  git.rs  mod.rs  script.rs
v0.1.4-docs-3/: config.html  deployment.html  handlers.html  index.html  intro.html  print.html  searchindex.js  searchindex.json
