[package]
name = "dip"
description = "Configurable webhook server."
version = "0.1.0"
authors = ["Michael Zhang <failed.down@gmail.com>"]

[[example]]
name = "github"
[dev_dependencies]
generic-array = "0.9"
hmac = "0.6"
secstr = "0.3"
sha-1 = "0.7"

[dependencies]
failure = "0.1"
futures = "0.1"
hyper = "0.12"
mktemp = "0.3"
lazy_static = "1.1"
notify = "4.0"
owning_ref = "0.3"
regex = "1.0"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
structopt = "0.2"
tokio = "0.1"
tokio-process = "0.2"
toml = "0.4"
walkdir = "2.2"

